<resources>
    <string name="app_name">dangle-lotto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_detail">Event Details</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_your_events">Your Events</string>
    <string name="cancel">Cancel</string>
    <string name="create_event_cancel_string">Cancel</string>
    <string name="done">Done</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Dangle Lotto Gathering</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="maximum_registrants">Maximum Registrants</string>
    <string name="deadline">Deadline</string>
    <string name="cancel_create_event">Cancel</string>
    <string name="done_create_event">Done</string>
    <string name="todo">TODO</string>
    <string name="event_description">Event Description</string>
    <string name="describe_your_event">We will be gathering…</string>
    <string name="require_geolocation">Require Geolocation</string>
    <string name="enter_categories_separated_by_string">Enter categories separated by string</string>
    <string name="images">Images</string>
    <string name="users">Users</string>
    <string name="notifications">Notifications</string>
    <string name="images_admin">Images</string>
    <string name="can_organize">Can Organize</string>
    <string name="cancel_admin">Cancel</string>
    <string name="delete_user">Delete User</string>
    <string name="delete">Delete</string>
</resources>