<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dangle_lotto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_eventDetail"
            app:destination="@+id/event_detail_fragment"/>
        </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dangle_lotto.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_userSettingFragment"
            app:destination="@id/userSettingFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_organizerEventDetailsFragment"
            app:destination="@id/organizerEventDetailsFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_createEventFragment"
            app:destination="@id/createEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dangle_lotto.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/event_detail_fragment"
        android:name="com.example.dangle_lotto.ui.detail.EventDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_event_detail" />

    <fragment
        android:id="@+id/navigation_your_events"
        android:name="com.example.dangle_lotto.ui.yourevents.YourEventsFragment"
        android:label="@string/title_your_events"
        tools:layout="@layout/fragment_your_events" >
        <action
            android:id="@+id/action_navigation_your_events_to_event_detail_fragment"
            app:destination="@id/event_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/userSettingFragment"
        android:name="com.example.dangle_lotto.ui.dashboard.UserSettingFragment"
        android:label="fragment_user_setting"
        tools:layout="@layout/fragment_user_setting" />

    <fragment
        android:id="@+id/organizerEventDetailsFragment"
        android:name="com.example.dangle_lotto.ui.dashboard.OrganizerEventDetailsFragment"
        android:label="fragment_organizer_event_details"
        tools:layout="@layout/fragment_organizer_event_details" />

    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.example.dangle_lotto.ui.create_event.CreateEventFragment"
        android:label="CreateEventFragment"
        tools:layout="@layout/fragment_create_event"/>
</navigation>