<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="12dp"
    tools:context="ui.create_event.CreateEventFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context="ui.create_event.CreateEventFragment">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Create Event"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/create_event_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/event_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text" />

            <EditText
                android:id="@+id/create_event_name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/enter_event_name"
                android:inputType="text"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"
                android:textSize="16sp"
                android:background="@drawable/bg_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_name_hint" />

            <ImageView
                android:id="@+id/create_event_banner"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/light_blue"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/event_card_test_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_name_input" />

            <Button
                android:id="@+id/create_event_banner_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/upload_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_banner" />

            <TextView
                android:id="@+id/create_event_max_entrants_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/maximum_registrants"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_banner_button" />

            <EditText
                android:id="@+id/create_event_input_max_entrants"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:inputType="number"
                android:textSize="16sp"
                android:hint="50"
                android:background="@drawable/bg_input_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_max_entrants_label" />

            <TextView
                android:id="@+id/create_event_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Limit"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_input_max_entrants" />

            <EditText
                android:id="@+id/create_event_size_input"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:inputType="number"
                android:hint="10"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/bg_input_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_size_label" />

            <TextView
                android:id="@+id/create_event_registration_start_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Registration Start Date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_size_input" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_event_registration_start_input"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field"
                android:clickable="true"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="12dp"
                android:elevation="1dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Select Date and Time"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_registration_start_label" />

            <TextView
                android:id="@+id/create_event_registration_end_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Registration End Date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_registration_start_input" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_event_registration_end_input"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field"
                android:clickable="true"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="12dp"
                android:elevation="1dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Select Date and Time"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_registration_end_label" />

            <TextView
                android:id="@+id/create_event_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Event Date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_registration_end_input" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_event_date_input"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field"
                android:clickable="true"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="12dp"
                android:elevation="1dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Select Date and Time"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_date_label" />

            <TextView
                android:id="@+id/create_event_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/event_description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_date_input" />

            <EditText
                android:id="@+id/create_event_input_description"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:padding="6dp"
                android:gravity="top|start"
                android:hint="@string/describe_your_event"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:background="@drawable/bg_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_description_label" />

            <CheckBox
                android:id="@+id/cb_enable_geolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="8dp"
                android:text="@string/require_geolocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_event_input_description" />

            <TextView
                android:id="@+id/categories_dropdown_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Categories"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_enable_geolocation" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_event_categories_input"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_input_field"
                android:paddingStart="16dp"
                android:gravity="center_vertical"
                android:text="Select Categories"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/categories_dropdown_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/create_event_categories_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_done" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:text="Done"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/create_event_categories_input"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>